/'
@title:       GESTOR DE CAMPEONATOS
@description: Aplicación para crear, organizar y administrar campeonatos.
@author:      Gerardo Tordoya
@date:        2022-10-12
@remarks:     *) Para los nombres se usó la convención de WideWorldImporters.
              *) Para los diagramas se usó la convención de Vertabelo.
'/

@startuml GESTOR DE CAMPEONATOS

' Configuración de plantilla.
skin rose
skinparam classFontName Calibri
skinparam shadowing false

' Configuración de diagrama.
hide circle
skinparam linetype ortho

' ──────────────────────────────────────────────────────────────────────────────

title Diseño de la Base de Datos SQL

' ─── OBJETOS ──────────────────────────────────────────────────────────────────

entity "CampeonatoParticipantes"
{
    CampeonatoParticipanteID \t int \t PK 
    ---
    CampeonatoID         \t\t\t int \t FK
    EquipoID           \t\t\t\t int \t FK
}


entity "CampeonatoPremios"
{
    CampeonatoPremioID \t int \t PK
    ---
    CampeonatoID     \t\t int \t FK
    PremioID       \t\t\t int \t FK
}


entity "Campeonatos"
{
    CampeonatoID \t int \t\t\t\t PK
    ---
    Nombre     \t\t nvarchar(200)
    Tarifa     \t\t money
    Activo     \t\t bit
}


entity "EquipoMiembros"
{
    EquipoMiembroID \t int \t PK
    ---
    EquipoID    \t\t\t int \t FK
    PersonaID     \t\t int \t FK
}


entity "Equipos"
{
   *EquipoID: \t int
    ---
    Nombre: \t nvarchar(100)
}


entity "PartidoParticipantes"
{
    *PartidoParticipanteID: int
    --
    PartidoActualID:     \t int   \t FK
    PartidoAnteriorID:   \t int   \t FK **N**
    EquipoID:          \t\t int   \t FK **N**
    Puntaje:           \t\t float \t **N**
}


entity "Partidos"
{
    *PartidoID:      int
    --
    CampeonatoID: \t int \t FK
    GanadorID:    \t int \t FK **N**
    Ronda:      \t\t int
}


entity "Personas"
{
    *PersonaID:  int
    --
    Nombre:   \t nvarchar(100)
    Apellido: \t nvarchar(100)
    Email:  \t\t nvarchar(100)
    Celular:  \t varchar(20)   \t **N**
}


entity "Premios"
{
    *PremioID:           int
    --
    PuestoNumero:     \t int
    PuestoNombre:     \t nvarchar(50)
    PremioMonto:      \t money
    PremioPorcentaje: \t float
}

' ─── RELACIONES ───────────────────────────────────────────────────────────────

Campeonatos ||--|{ CampeonatoParticipantes
Campeonatos ||--|{ CampeonatoPremios

Equipos     ||--|{ CampeonatoParticipantes
Equipos     ||--|{ EquipoMiembros
Equipos     ||--|{ PartidoParticipantes
Equipos     ||--|{ Partidos

Partidos    ||--|{ PartidoParticipantes

Personas    ||--|{ EquipoMiembros

Premios     ||--|{ CampeonatoPremios

' ─── NOTAS ────────────────────────────────────────────────────────────────────
note top of Premios: Prizes
note top of Campeonatos: Tournaments
note top of Equipos: Teams
note top of Personas: People

note "TournamentPrizes" as N1
CampeonatoPremios .. N1

note "TournamentEntries" as N2
CampeonatoParticipantes .. N2

note "MatchupEntries" as N3
PartidoParticipantes .. N3

note "Matchups" as N4
Partidos .. N4

note "TeamMembers" as N5
EquipoMiembros .. N5

' ──────────────────────────────────────────────────────────────────────────────

caption Última actualización: 2022-10-22

' ──────────────────────────────────────────────────────────────────────────────

@enduml
